--- a/Gillespie_Tandem_v8_Tandem.ipynb
+++ b/Gillespie_Tandem_v8_Tandem.ipynb
@@ -304,8 +304,8 @@
     "\n",
     "    #---------------------------------------------------------------------------------------------------# \n",
     "    # Calculating lengths for supercoiling density rate equations\n",
-    "    n_fs = max(PLs + Ns/2 + TLg*(pTet_tot - pTet)/(pTet_tot) - (sigma_ts + sigma_tg)/h0,1)\n",
-    "    n_fg = max(TLg + Ns/2 + (sigma_ts + sigma_tg)/h0,1)\n",
+    "    n_fs = max(PLs + Ns/2 - (sigma_ts + sigma_tg)/h0,1)\n",
+    "    n_fg = max(PLg + Ns/2 - (sigma_ts + sigma_tg)/h0,1)\n",
     "        \n",
     "    # Calculating k_cat(sigma) Rate constants in the flourescence equation\n",
     "    #---------------------------------------------------------------------------------------------------# \n",
@@ -583,12 +583,10 @@
     "            event, dt, n_fs, n_fg = gillespie_draw(propensity_func, population, t, temp)\n",
     "            temp = dt\n",
     "            sc_update = np.array([   \n",
-    "            [0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.5*PLs/(h0*n_fs), -0.5*PLs/(h0*n_fs), 0, 0],\n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.5*PLg/(h0*n_fg), -0.5*PLg/(h0*n_fg)],\n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, -0.5*TLs/(h0*n_fs), 0, 0, 0],\n",
-    "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, -0.5*TLg/(h0*n_fg), 0]]\n",
+    "            [0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.5*PLs/(h0*n_fs), 0.5*PLs/(h0*TLs), 0, 0],\n",
+    "[0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5*PLg/(h0*n_fg), PLg/(TLg)]]\n",
     "            ,dtype=np.int)\n",
-    "            update[18:22] = sc_update\n",
+    "            update[18:20] = sc_update\n",
     "            # Update the population\n",
     "            population_previous = population.copy()\n",
     "            population += update[event,:]\n",
@@ -614,24 +612,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-c23b5ab0fe78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_simulations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     pops_bistable[i,:,:], n_fs_total[i, :], n_fg_total[i, :] = gillespie_ssa(simple_propensity, simple_update,\n\u001b[0;32m---> 19\u001b[0;31m                                 population_0, time_points)\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-70-6494119faeb2>\u001b[0m in \u001b[0;36mgillespie_ssa\u001b[0;34m(propensity_func, update, population_0, time_points)\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;31m#print(i)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtime_points\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi_time\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mevent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_fs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_fg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgillespie_draw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpropensity_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m             \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             sc_update = np.array([   \n",
-      "\u001b[0;32m<ipython-input-65-4589ac9cda5a>\u001b[0m in \u001b[0;36mgillespie_draw\u001b[0;34m(propensity_func, population, t, t0)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Compute propensities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mprops\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_fs_total\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_fg_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropensity_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpopulation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Sum of propensities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprops_sum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-68-a3ab2571e138>\u001b[0m in \u001b[0;36msimple_propensity\u001b[0;34m(population, t, dt)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m#---------------------------------------------------------------------------------------------------#\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Calculating lengths for supercoiling density rate equations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mn_fs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPLs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mNs\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mTLg\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpTet_tot\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mpTet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpTet_tot\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msigma_ts\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msigma_tg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mh0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mn_fg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTLg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mNs\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msigma_ts\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msigma_tg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mh0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Specify parameters for calculation\n",
     "#params = np.array([156.25, 15.6, 2.5, 1, 2.0015,2.9618e-5, 0.000055]) \n",
